<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.DashFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_task_list"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        app:tabIndicatorColor="@color/colorControlActivated"
        app:tabMaxWidth="200dp"
        app:tabMinWidth="100dp"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/black"
        app:tabTextColor="@color/text_s">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/task_tab_item1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_task_my1" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/task_tab_item2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_task_my2" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/task_tab_item3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_task_my3" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/task_tab_item4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_task_my4" />

    </com.google.android.material.tabs.TabLayout>

    <com.lelezu.app.xianzhuan.ui.views.RefreshRecycleView
        android:id="@+id/rv_task"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/radius_border"
        android:padding="10dp" />


</LinearLayout>